# Kanji-God

./: .gitignore  Button.cpp  Button.hpp  Controller.cpp  Controller.hpp  DrawableStroke.cpp  DrawableStroke.hpp  DrawingBoard.cpp  DrawingBoard.hpp  DrawingRepository.hpp  Enums.hpp  Exercise.cpp  Exercise.hpp  FuckWindows.cpp  FuckWindows.hpp  Kanji-God.cbp  Kanji.cpp  Kanji.hpp  KanjiGod  KanjiRepository.cpp  KanjiRepository.hpp  MainWindow.cpp  MainWindow.hpp  Makefile  PointByPointBoard.cpp  PointByPointBoard.hpp  README.md  ResourceHolder.hpp  ResourceHolder.tpp  ShowingBoard.cpp  ShowingBoard.hpp  Sign.cpp  Sign.hpp  Utilities.cpp  Utilities.hpp  Word.cpp  WordRepository.cpp  WordRepository.hpp  main.cpp
files/: JLPTN2kanji.txt  JLPTN2words.txt  JLPTN3kanji.txt  JLPTN3words.txt  JLPTN4kanji.txt  JLPTN4words.txt  JLPTN5kanji.txt  JLPTN5strokes.txt  JLPTN5words.txt  grade1kanji.txt  grade1kanjiprogress.txt  kanjis-grade-1.txt  kanjis-grade1.txt  newWords.txt  words-grade1.txt  words.txt
sounds/: correct_answer.dnm  hover_over_button.dnm  incorrect_answer.dnm  intro.dnm  press_button.dnm  release_button.dnm
sprites/: itchio-banner.pdn
src/: Button.cpp  Button.hpp  CMakeLists.txt  Controller.cpp  Controller.hpp  DrawableStroke.cpp  DrawableStroke.hpp  DrawingBoard.cpp  DrawingBoard.hpp  Enums.hpp  Exercise.cpp  Kanji.cpp  Kanji.hpp  KanjiRepository.cpp  MainWindow.cpp  MainWindow.hpp  PointByPointBoard.cpp  PointByPointBoard.hpp  ResourceHolder.cpp  ResourceHolder.hpp  ResourceHolder.tpp  ScrewWindows.cpp  ScrewWindows.hpp  ShowingBoard.cpp  ShowingBoard.hpp  Sign.cpp  Sign.hpp  Utilities.cpp  Utilities.hpp  Word.hpp  WordRepository.cpp  main.cpp
